dark mode fixes

--- a/new/menu.scss
+++ b/new/menu.scss
@@ -888,6 +888,7 @@ code, pre {
 .globalNav .item-home h1 {
   line-height: 50px;
   font-size: 20px;
+  font-weight: 400;
   margin: 0;
   color: inherit
 }
